# streaming-markdown-kit

./: Cargo.toml  README.md
docs/: streaming-render-test-protocol.md  table-polish-trigger-tests.md
examples/: sanitizer_bench.rs
issues/: 001-multibyte-chars-byte-vs-char-vs-grapheme.md  002-streaming-render-state-machine-and-render-gap-audit.md  003-makepad-widget-identity-and-lifecycle-in-streaming.md
specs/: m-img-2-http-images.spec.md  m1-remend-rs.spec.md  markdown-image-rendering.spec.md
specs/roadmap/: m3-event-stream-parser.spec.md
src/: fences.rs  latex_wrap.rs  lib.rs  mermaid.rs  remend.rs  sanitizer.rs
tests/: corpus.rs  fences.rs  probe_svg.rs  remend.rs  sanitizer.rs  sanitizer_pulldown.rs
tests/corpus/: README.md
tests/corpus/gpt/: markdown-full-showcase.md
tests/corpus/kimi/: markdown-demo-long.md  markdown-demo-short.md
tests/corpus/opus/: technical-writing-cjk-math-code.jsonl  technical-writing-cjk-math-code.md
